--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "7c67d8b7",
    "metadata": {},
    "outputs": [
@@ -738,12 +738,12 @@
    "source": [
     "**CONCLUSION**\n",
     "\n",
-    "We can see that cost of good produced decreases the more units produced, but after approximately 40 units the cost begins to rise again, and costs equal again at 90 units produced, roughly."
+    "*We can see that cost of good produced decreases the more units produced, but after approximately 40 units the cost begins to rise again, and costs equal again at 90 units produced, roughly.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "a7e70faa",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44.99999999999689\n"
+      "The minimum point of the function is: 44.99999999999689\n"
      ]
     },
     {
@@ -785,10 +785,10 @@
     "    sns.lineplot(x=xArray, y=yArray)\n",
     "    \n",
     "    if x is not None:\n",
-    "        assert type(x) in [np.ndarray, list] # x should be numpy array or list\n",
-    "        if type(x) is list: # if it is a list, convert to numpy array\n",
+    "        assert type(x) in [np.ndarray, list]                          # x should be numpy array or list\n",
+    "        if type(x) is list:                                           # if it is a list, convert to numpy array\n",
     "            x = np.array(x)\n",
-    "        y = f(x)\n",
+    "        y = f(x)                                                      # y equals the function of the array (x) in the line above\n",
     "        sns.scatterplot(x=x, y=y, color='red')\n",
     "\n",
     "def gradient_descent(x, nsteps=1):\n",
@@ -805,7 +805,7 @@
     "\n",
     "x=0\n",
     "x, collectedXs = gradient_descent(x, nsteps=1500)\n",
-    "print(x)\n",
+    "print(\"The minimum point of the function is:\", x)\n",
     "\n",
     "visualize(f, x=collectedXs)"
    ]
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "id": "9e200c32",
    "metadata": {},
    "outputs": [
@@ -878,7 +878,7 @@
       "The second matrix is: [[4 5]\n",
       " [6 7]]\n",
       "\n",
-      "The sum of the two matrix is: [[ 5  7]\n",
+      "The sum of the two matrices is: [[ 5  7]\n",
       " [ 9 11]]\n"
      ]
     }
@@ -910,7 +910,7 @@
     "# Adding both matrices\n",
     "\n",
     "added = matrixA + matrixB\n",
-    "print(\"The sum of the two matrix is:\", added)\n"
+    "print(\"The sum of the two matrices is:\", added)\n"
    ]
   },
   {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "867b70fc",
    "metadata": {},
    "outputs": [
@@ -978,68 +978,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "681930a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list 1 : [4, 53, 2, 9, 3, 90]\n",
+      "Original list 2 : [43, 6, 5, 6, 43, 21]\n",
+      "\n",
+      "The resulting list is: [47, 59, 7, 15, 46, 111]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use list comprehension to perform addition of the two lists:\n",
     "\n",
     "\n",
     "# Initializing lists\n",
-    "\n",
+    "list3 = [4, 53, 2, 9, 3, 90]\n",
+    "list4 = [43, 6, 5, 6, 43, 21]\n",
     " \n",
     "# Printing original lists\n",
-    "\n",
+    "print (\"Original list 1 : \" + str(list3))\n",
+    "print (\"Original list 2 : \" + str(list4))\n",
     " \n",
     "# Using list comprehension to add two lists\n",
+    "alt_list = []\n",
     "\n",
+    "for x in range(len(list3)):\n",
+    "    alt_list.append(list3[x] + list4[x])\n",
     " \n",
-    "# Printing resulting list \n"
+    "# Printing resulting list \n",
+    "print()\n",
+    "print(\"The resulting list is:\", alt_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "a3a8a425",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list 1 : [4, 53, 2, 9, 3, 90]\n",
+      "Original list 2 : [43, 6, 5, 6, 43, 21] \n",
+      "\n",
+      "The resulting list using add() and map() is : [47, 59, 7, 15, 46, 111]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use map() + add():\n",
     "\n",
+    "from operator import add #No encontré otra manera no se si esta bien así. \n",
     "\n",
     "# Initializing lists\n",
-    "\n",
+    "list5 = [4, 53, 2, 9, 3, 90]\n",
+    "list6 = [43, 6, 5, 6, 43, 21]\n",
     " \n",
     "# Printing original lists\n",
-    "\n",
+    "print (\"Original list 1 : \" + str(list5))\n",
+    "print (\"Original list 2 : \" + str(list6), \"\\n\")\n",
     " \n",
     "# Using map() + add() to add two lists\n",
-    "\n",
+    "resulting_list  = list(map(add, list5, list6))\n",
     " \n",
-    "# Printing resulting list "
+    "# Printing resulting list \n",
+    "print(\"The resulting list using add() and map() is :\", resulting_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "1708d7ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list 1 : [4, 53, 2, 9, 3, 90]\n",
+      "Original list 2 : [43, 6, 5, 6, 43, 21] \n",
+      "\n",
+      "The resulting list using zip() and map() is : [47, 59, 7, 15, 46, 111]\n"
+     ]
+    }
+   ],
    "source": [
     "# Use zip() + sum():\n",
     "\n",
     "\n",
     "# Initializing lists\n",
-    "\n",
+    "list5 = [4, 53, 2, 9, 3, 90]\n",
+    "list6 = [43, 6, 5, 6, 43, 21]\n",
     " \n",
     "# Printing original lists\n",
-    "\n",
+    "print (\"Original list 1 : \" + str(list5))\n",
+    "print (\"Original list 2 : \" + str(list6), \"\\n\")\n",
     " \n",
     "# Using zip() + sum() to add two lists\n",
-    "\n",
+    "resulting_list  = list(map(sum, zip(list5, list6)))\n",
     " \n",
-    "# Printing resulting list "
+    "# Printing resulting list \n",
+    "print(\"The resulting list using zip() and map() is :\", resulting_list)"
    ]
   },
   {
@@ -1065,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "840e7d0e",
    "metadata": {},
    "outputs": [
@@ -1101,21 +1148,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "db6c3355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 18]\n",
+      " [25 26]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
-    "\n",
+    "import numpy as np\n",
     " \n",
     "# Input two matrices\n",
-    "\n",
+    "matrix1 = [[1,7],\n",
+    " [4,5]]\n",
+    "matrix2 = [[5,4],\n",
+    " [1,2]]\n",
     " \n",
     "# This will return dot product\n",
-    "\n",
+    "dot_product = np.dot(matrix1, matrix2)\n",
     " \n",
-    "# Print resulting matrix\n"
+    "# Print resulting matrix\n",
+    "print(dot_product)"
    ]
   },
   {
