--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "db6c3355",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1156,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[12 18]\n",
+      "The resulting matrix using the dot product is: \n",
+      " [[12 18]\n",
       " [25 26]]\n"
      ]
     }
@@ -1175,7 +1176,7 @@
     "dot_product = np.dot(matrix1, matrix2)\n",
     " \n",
     "# Print resulting matrix\n",
-    "print(dot_product)"
+    "print(\"The resulting matrix using the dot product is:\", \"\\n\", dot_product)"
    ]
   },
   {
